--- a/Python_Practice_06_2_Numpy.ipynb
+++ b/Python_Practice_06_2_Numpy.ipynb
@@ -1276,6 +1276,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.array의 view 는 dimension 속성은 공유하지 않으면서 원소 데이터는 공유함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]] \n",
+      "\n",
+      "[[  1 111   3   4]\n",
+      " [  5   6   7   8]]\n",
+      "[[  1 111]\n",
+      " [  3   4]\n",
+      " [  5   6]\n",
+      " [  7   8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3,4],[5,6,7,8]])\n",
+    "new = arr.view()\n",
+    "new = new.reshape(4,2)\n",
+    "print(arr)\n",
+    "print(new, '\\n')\n",
+    "\n",
+    "new[0,1] = 111\n",
+    "print(arr)\n",
+    "print(new)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
